--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "vite build",
     "serve": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
-    "vite": "^2.6.4"
+    "vite": "^2.7.10"
   },
   "dependencies": {
     "three": "^0.136.0"
